--- a/460-tip-app/Base.lproj/Main.storyboard
+++ b/460-tip-app/Base.lproj/Main.storyboard
@@ -162,47 +162,52 @@
                         <outlet property="toolbar" destination="K79-u9-i41" id="eUC-TW-NlV"/>
                         <outlet property="totalLabel" destination="xP4-LP-hwk" id="Luh-UT-i1y"/>
                         <outlet property="totalTipLabel" destination="KSm-CQ-ZSK" id="AXf-1l-vx6"/>
+                        <segue destination="C25-2z-7rl" kind="show" identifier="tipTailorSegue" id="5V5-R2-Mxx"/>
+                        <segue destination="1LY-aQ-nsK" kind="show" identifier="tipConfigSegue" id="erH-fx-SFh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qwj-TH-Pqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="517" y="365"/>
         </scene>
-        <!--View Controller-->
+        <!--Tip Config-->
         <scene sceneID="Orw-Cf-Nri">
             <objects>
-                <viewController id="JHu-9b-n7p" sceneMemberID="viewController">
+                <viewController id="JHu-9b-n7p" customClass="TipConfigViewController" customModule="_60_tip_app" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="TuU-Gu-mQl"/>
                         <viewControllerLayoutGuide type="bottom" id="GCQ-P9-631"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="H7V-wT-XNO">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Tip Config" id="Rf4-2e-sTv"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kpH-ax-XsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="167" y="1195"/>
+            <point key="canvasLocation" x="1885" y="1117"/>
         </scene>
-        <!--View Controller-->
+        <!--Tip Tailoring-->
         <scene sceneID="LSm-qD-N60">
             <objects>
-                <viewController id="1nh-xz-wkm" sceneMemberID="viewController">
+                <viewController id="1nh-xz-wkm" customClass="TipTailorViewController" customModule="_60_tip_app" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="gQT-x5-Maa"/>
                         <viewControllerLayoutGuide type="bottom" id="iba-0b-Czi"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="HUw-ON-R98">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Tip Tailoring" id="V5D-yG-Wmp"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U8i-so-SL6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="927" y="1279"/>
+            <point key="canvasLocation" x="829" y="1125"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Pdc-pS-Np3">
@@ -221,6 +226,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iBz-0W-r4g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-295" y="365"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="TIc-2l-5Xr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1LY-aQ-nsK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sMB-O7-9Ed">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1nh-xz-wkm" kind="relationship" relationship="rootViewController" id="iiF-1R-a5w"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="til-J4-ilb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="297" y="1125"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="O90-cd-Ucn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="C25-2z-7rl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kNa-y8-uG8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JHu-9b-n7p" kind="relationship" relationship="rootViewController" id="pW9-xs-wKi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DX3-js-212" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1353" y="1117"/>
         </scene>
     </scenes>
 </document>
