--- a/460-tip-app/Base.lproj/Main.storyboard
+++ b/460-tip-app/Base.lproj/Main.storyboard
@@ -163,7 +163,7 @@
                         <outlet property="totalLabel" destination="xP4-LP-hwk" id="Luh-UT-i1y"/>
                         <outlet property="totalTipLabel" destination="KSm-CQ-ZSK" id="AXf-1l-vx6"/>
                         <segue destination="C25-2z-7rl" kind="show" identifier="tipConfigSegue" id="5V5-R2-Mxx"/>
-                        <segue destination="1LY-aQ-nsK" kind="show" identifier="tipTailorSegue" id="erH-fx-SFh"/>
+                        <segue destination="zjs-8X-Y7a" kind="show" identifier="tipTailorSegue" id="5G7-mU-e1M"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qwj-TH-Pqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -188,26 +188,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kpH-ax-XsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1885" y="1117"/>
-        </scene>
-        <!--Tip Tailoring-->
-        <scene sceneID="LSm-qD-N60">
-            <objects>
-                <viewController id="1nh-xz-wkm" customClass="TipTailorViewController" customModule="_60_tip_app" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="gQT-x5-Maa"/>
-                        <viewControllerLayoutGuide type="bottom" id="iba-0b-Czi"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="HUw-ON-R98">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Tip Tailoring" id="V5D-yG-Wmp"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="U8i-so-SL6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="829" y="1125"/>
+            <point key="canvasLocation" x="1443" y="1103"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Pdc-pS-Np3">
@@ -227,23 +208,33 @@
             </objects>
             <point key="canvasLocation" x="-295" y="365"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="TIc-2l-5Xr">
+        <!--Table View Controller-->
+        <scene sceneID="f7z-Y7-ApY">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1LY-aQ-nsK" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sMB-O7-9Ed">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="1nh-xz-wkm" kind="relationship" relationship="rootViewController" id="iiF-1R-a5w"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="til-J4-ilb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="hcW-jd-g6l" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="buO-aJ-9L9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="9ea-7I-AYW">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9ea-7I-AYW" id="SWD-Uy-IZY">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="hcW-jd-g6l" id="yFD-X3-cRU"/>
+                            <outlet property="delegate" destination="hcW-jd-g6l" id="Gyr-cO-iCn"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="SBA-uN-y2H"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tkB-ka-DmO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="297" y="1125"/>
+            <point key="canvasLocation" x="605" y="1103"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="O90-cd-Ucn">
@@ -261,7 +252,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DX3-js-212" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1353" y="1117"/>
+            <point key="canvasLocation" x="1033" y="1103"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="d6K-Ar-uiK">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zjs-8X-Y7a" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Q2c-Kh-nVV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="hcW-jd-g6l" kind="relationship" relationship="rootViewController" id="ARb-RZ-53g"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ts3-oa-ChE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="73" y="1103"/>
         </scene>
     </scenes>
 </document>
