--- a/460-tip-app/Base.lproj/Main.storyboard
+++ b/460-tip-app/Base.lproj/Main.storyboard
@@ -208,10 +208,10 @@
             </objects>
             <point key="canvasLocation" x="-295" y="365"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Tip Tailor Table View Controller-->
         <scene sceneID="f7z-Y7-ApY">
             <objects>
-                <tableViewController id="hcW-jd-g6l" sceneMemberID="viewController">
+                <tableViewController id="hcW-jd-g6l" customClass="TipTailorTableViewController" customModule="_60_tip_app" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="buO-aJ-9L9">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
