Tableview does not work but it does not crash

--- a/460-tip-app/Base.lproj/Main.storyboard
+++ b/460-tip-app/Base.lproj/Main.storyboard
@@ -163,12 +163,12 @@
                         <outlet property="totalLabel" destination="xP4-LP-hwk" id="Luh-UT-i1y"/>
                         <outlet property="totalTipLabel" destination="KSm-CQ-ZSK" id="AXf-1l-vx6"/>
                         <segue destination="C25-2z-7rl" kind="show" identifier="tipConfigSegue" id="5V5-R2-Mxx"/>
-                        <segue destination="zjs-8X-Y7a" kind="show" identifier="tipTailorSegue" id="5G7-mU-e1M"/>
+                        <segue destination="Onh-hm-ann" kind="show" identifier="tipTailorSegue" id="zf6-dZ-NYm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qwj-TH-Pqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="517" y="365"/>
+            <point key="canvasLocation" x="571" y="381"/>
         </scene>
         <!--Tip Config-->
         <scene sceneID="Orw-Cf-Nri">
@@ -188,7 +188,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kpH-ax-XsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1443" y="1103"/>
+            <point key="canvasLocation" x="2017" y="1097"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Pdc-pS-Np3">
@@ -208,34 +208,6 @@
             </objects>
             <point key="canvasLocation" x="-295" y="365"/>
         </scene>
-        <!--Tip Tailor Table View Controller-->
-        <scene sceneID="f7z-Y7-ApY">
-            <objects>
-                <tableViewController id="hcW-jd-g6l" customClass="TipTailorTableViewController" customModule="_60_tip_app" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="buO-aJ-9L9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="9ea-7I-AYW">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9ea-7I-AYW" id="SWD-Uy-IZY">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="hcW-jd-g6l" id="yFD-X3-cRU"/>
-                            <outlet property="delegate" destination="hcW-jd-g6l" id="Gyr-cO-iCn"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="SBA-uN-y2H"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tkB-ka-DmO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="605" y="1103"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="O90-cd-Ucn">
             <objects>
@@ -252,25 +224,60 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DX3-js-212" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1033" y="1103"/>
+            <point key="canvasLocation" x="1571" y="1097"/>
+        </scene>
+        <!--Tip Tailor Table View Controller-->
+        <scene sceneID="8fI-E4-cEY">
+            <objects>
+                <tableViewController id="HEi-1C-B2Z" customClass="TipTailorTableViewController" customModule="_60_tip_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="3uV-dd-KOX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="guestCell" id="7hh-tV-lax">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7hh-tV-lax" id="AOu-FL-E0Y">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <textField opaque="NO" clipsSubviews="YES" tag="123" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bgU-y2-gEJ">
+                                            <rect key="frame" x="16" y="7" width="97" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="HEi-1C-B2Z" id="pvY-so-Iqy"/>
+                            <outlet property="delegate" destination="HEi-1C-B2Z" id="C6R-ka-7MM"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="1wp-v1-eaV"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fEv-6f-he9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="867" y="1069"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="d6K-Ar-uiK">
+        <scene sceneID="ypm-xP-poZ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zjs-8X-Y7a" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Onh-hm-ann" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Q2c-Kh-nVV">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xQO-Y0-TVb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="hcW-jd-g6l" kind="relationship" relationship="rootViewController" id="ARb-RZ-53g"/>
+                        <segue destination="HEi-1C-B2Z" kind="relationship" relationship="rootViewController" id="zWs-gy-hqT"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ts3-oa-ChE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9S3-qc-UOs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="73" y="1103"/>
+            <point key="canvasLocation" x="335" y="1069"/>
         </scene>
     </scenes>
 </document>
