--- a/460-tip-app/Base.lproj/Main.storyboard
+++ b/460-tip-app/Base.lproj/Main.storyboard
@@ -163,11 +163,47 @@
                         <outlet property="totalLabel" destination="xP4-LP-hwk" id="Luh-UT-i1y"/>
                         <outlet property="totalTipLabel" destination="KSm-CQ-ZSK" id="AXf-1l-vx6"/>
                         <segue destination="C25-2z-7rl" kind="show" identifier="tipConfigSegue" id="5V5-R2-Mxx"/>
+                        <segue destination="V3G-ly-pPX" kind="show" identifier="tipTailorSegue" id="aHt-t3-73L"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qwj-TH-Pqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="571" y="381"/>
+        </scene>
+        <!--Tip Tailoring Table View Controller-->
+        <scene sceneID="gAS-63-maj">
+            <objects>
+                <tableViewController id="tV0-kI-cJT" customClass="TipTailoringTableViewController" customModule="_60_tip_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="HwU-CJ-JNY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="myGuestCell" id="slh-er-1bx">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="slh-er-1bx" id="CUj-9N-jyM">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <textField opaque="NO" clipsSubviews="YES" tag="123" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pjd-Ao-bgd">
+                                            <rect key="frame" x="8" y="7" width="97" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="tV0-kI-cJT" id="2h0-az-YD4"/>
+                            <outlet property="delegate" destination="tV0-kI-cJT" id="gGD-e9-4yA"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="jaE-5N-xhJ"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vTq-np-MtR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="833" y="1157"/>
         </scene>
         <!--Tip Config-->
         <scene sceneID="Orw-Cf-Nri">
@@ -187,7 +223,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kpH-ax-XsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2017" y="1097"/>
+            <point key="canvasLocation" x="1823" y="1167"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Pdc-pS-Np3">
@@ -223,7 +259,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DX3-js-212" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1571" y="1097"/>
+            <point key="canvasLocation" x="1295" y="1167"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8Fi-fa-VIj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="V3G-ly-pPX" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9G5-Lo-ag8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tV0-kI-cJT" kind="relationship" relationship="rootViewController" id="OIM-xA-pTt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nnj-Ng-emv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="251" y="1157"/>
         </scene>
     </scenes>
 </document>
