--- a/460-tip-app/Base.lproj/Main.storyboard
+++ b/460-tip-app/Base.lproj/Main.storyboard
@@ -249,6 +249,12 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tip on Tax" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4b-4n-68m">
+                                <rect key="frame" x="73" y="369" width="79" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vm1-3u-4Qs">
                                 <rect key="frame" x="222" y="153" width="52" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -277,6 +283,24 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v6I-Wo-mas">
+                                <rect key="frame" x="224" y="364" width="51" height="31"/>
+                                <connections>
+                                    <action selector="tipOnTaxToggled:" destination="JHu-9b-n7p" eventType="valueChanged" id="KqV-17-jLC"/>
+                                </connections>
+                            </switch>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IPw-AC-IIc">
+                                <rect key="frame" x="224" y="434" width="51" height="31"/>
+                                <connections>
+                                    <action selector="tipOnDeductionsToggled:" destination="JHu-9b-n7p" eventType="valueChanged" id="VTG-uR-2pP"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tip on Deductions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dwN-M2-Ht7">
+                                <rect key="frame" x="44" y="439" width="141" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -285,6 +309,8 @@
                     <connections>
                         <outlet property="maxField" destination="KiZ-J8-uDy" id="rss-mt-hob"/>
                         <outlet property="minField" destination="Vm1-3u-4Qs" id="cgA-Kg-Dd9"/>
+                        <outlet property="tipOnDeductionsSwitch" destination="IPw-AC-IIc" id="o32-zv-FeD"/>
+                        <outlet property="tipOnTaxSwitch" destination="v6I-Wo-mas" id="1qz-4E-FVZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kpH-ax-XsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
